// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Sites End-to-End Tests when creating a dive site will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "description",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "depth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "location",
      ],
      "received": "boolean",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 90,
      "message": "Number must be less than or equal to 90",
      "path": [
        "gps",
        "lat",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "gps",
        "lon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received string",
      "path": [
        "freeToDive",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received number",
      "path": [
        "shoreAccess",
      ],
      "received": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'salt' | 'fresh' | 'mixed', received 'brackish'",
      "options": [
        "salt",
        "fresh",
        "mixed",
      ],
      "path": [
        "waterType",
      ],
      "received": "brackish",
    },
  ],
}
`;

exports[`Dive Sites End-to-End Tests when getting a dive site will return the dive site 1`] = `
{
  "averageRating": 1.43,
  "createdOn": "2024-04-10T03:49:32.952Z",
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depth": {
    "depth": 36.14,
    "unit": "ft",
  },
  "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
  "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
  "freeToDive": true,
  "gps": {
    "lat": 27.2481,
    "lon": -174.3613,
  },
  "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
  "location": "East Shawnhaven",
  "name": "original pitiful resource",
  "shoreAccess": false,
  "updatedOn": "2023-12-26T03:21:37.584Z",
  "waterType": "salt",
}
`;

exports[`Dive Sites End-to-End Tests when searching dive sites will list results from a basic search 1`] = `
{
  "sites": [
    {
      "averageDifficulty": 3.09,
      "averageRating": 4.9832,
      "createdOn": "2022-06-19T00:08:34.934Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": "2020-02-24T22:30:50.944Z",
        "name": "Devin Ratke",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "depth": {
        "depth": 33.12,
        "unit": "ft",
      },
      "description": "Coadunatio bos debitis vulgivagus valeo. Reiciendis atrox adopto. Demulceo contabesco maxime coruscus viscus umquam.",
      "directions": "Canis capitulus stultus. Vestrum thema aperte decor. Versus nemo tabernus decimus abutor.",
      "freeToDive": true,
      "gps": {
        "lat": -14.6036,
        "lon": -160.3713,
      },
      "id": "b5a31451-0d07-42ad-9e86-de5d63bbf582",
      "location": "Fort Dimitriport",
      "name": "wry boring examiner",
      "shoreAccess": false,
      "updatedOn": "2023-09-02T01:25:27.123Z",
    },
    {
      "averageDifficulty": 2.96,
      "averageRating": 4.97244555665,
      "createdOn": "2022-10-07T07:21:13.641Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1184.jpg",
        "location": "Chino Hills",
        "logBookSharing": "private",
        "memberSince": "2021-01-18T00:12:59.934Z",
        "name": "Lila Grant",
        "userId": "c6b038c1-857e-4a8f-b711-dbc7fd7620b3",
        "username": "Julia15",
      },
      "depth": {
        "depth": 18.39,
        "unit": "m",
      },
      "description": "Synagoga apto cur temptatio admiratio labore cilicium doloribus aegrotatio. Conspergo quia cubicularis. Constans denuncio bonus doloribus defaeco iste succedo caecus.",
      "directions": "Vomica assumenda ulciscor tactus eos cumque molestiae. Denego theologus velut creptio comprehendo. Vulgus conor pecto.",
      "freeToDive": true,
      "gps": {
        "lat": 4.3973,
        "lon": -5.8097,
      },
      "id": "4fef73b2-aa25-4fa1-818d-d4eae89bf98f",
      "location": "Lake Garthstad",
      "name": "untidy puzzled birth",
      "shoreAccess": true,
      "updatedOn": "2023-09-02T00:53:22.134Z",
    },
    {
      "averageDifficulty": 2.71,
      "averageRating": 4.939903,
      "createdOn": "2022-07-06T08:48:04.602Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/85.jpg",
        "location": "Moore",
        "logBookSharing": "private",
        "memberSince": "2018-06-25T23:18:47.167Z",
        "name": "Eileen Bartoletti DVM",
        "userId": "f9919636-4939-4975-90be-4854c5ed58b4",
        "username": "Lucy55",
      },
      "depth": {
        "depth": 13.87,
        "unit": "ft",
      },
      "description": "Animus cupressus pecto coepi. Statua color argumentum cotidie texo. Acerbitas denique denego unus uredo explicabo adimpleo.",
      "directions": "Vilitas saepe victoria defendo contabesco sono. Ventosus dedecor eaque. Coma adicio spiritus vix decor spes.",
      "freeToDive": false,
      "gps": {
        "lat": 25.1647,
        "lon": 3.9548,
      },
      "id": "88e1919d-be18-41d4-93a5-b70140bb8989",
      "location": "Nyasiafield",
      "name": "major limping airbag",
      "shoreAccess": false,
      "updatedOn": "2023-10-20T12:44:05.596Z",
    },
    {
      "averageDifficulty": 2.99,
      "averageRating": 4.92324,
      "createdOn": "2023-03-20T08:36:54.341Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1184.jpg",
        "location": "Chino Hills",
        "logBookSharing": "private",
        "memberSince": "2021-01-18T00:12:59.934Z",
        "name": "Lila Grant",
        "userId": "c6b038c1-857e-4a8f-b711-dbc7fd7620b3",
        "username": "Julia15",
      },
      "depth": {
        "depth": 15.62,
        "unit": "ft",
      },
      "description": "Conservo eos apud vulnus ater absque decipio. Tepesco amaritudo tres attero carmen deserunt. Vindico vix studio aranea culpo curriculum velit.",
      "directions": "Spes voco caute vomica conitor atavus. Vallum constans clibanus aranea nam vorax. Sunt maxime termes calamitas vesica adeo.",
      "gps": {
        "lat": 78.0567,
        "lon": 90.3742,
      },
      "id": "44075b01-27e0-4713-9037-ca7b77aa6cff",
      "location": "Walshhaven",
      "name": "unwieldy worn chromolithograph",
      "updatedOn": "2023-11-06T06:07:43.469Z",
      "waterType": "fresh",
    },
    {
      "averageDifficulty": 3.24,
      "averageRating": 4.915537,
      "createdOn": "2023-05-13T12:02:10.974Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": "2020-02-24T22:30:50.944Z",
        "name": "Devin Ratke",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "depth": {
        "depth": 35.17,
        "unit": "m",
      },
      "description": "Conor amplitudo adeptio depereo tenetur carcer caterva ustilo claro bene. Temporibus corona provident architecto tabesco suffragium carpo conturbo. Tui somnus utrimque velut vilitas curatio fugiat.",
      "directions": "Adduco commodo claro tam coniecto auxilium copiose aspernatur alveus adicio. Conspergo demonstro undique ter veniam voluptatum minima casso bestia. Tres damno culpo capio voluptate tempus.",
      "gps": {
        "lat": 50.3677,
        "lon": 20.9327,
      },
      "id": "1561e4a5-8777-433a-9e9d-e8a07452ce88",
      "location": "Lake Jalynchester",
      "name": "silky sharp brilliant",
      "shoreAccess": false,
      "updatedOn": "2024-04-13T05:22:48.093Z",
    },
    {
      "averageDifficulty": 4.12,
      "averageRating": 4.89,
      "createdOn": "2023-03-15T03:29:03.884Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1184.jpg",
        "location": "Chino Hills",
        "logBookSharing": "private",
        "memberSince": "2021-01-18T00:12:59.934Z",
        "name": "Lila Grant",
        "userId": "c6b038c1-857e-4a8f-b711-dbc7fd7620b3",
        "username": "Julia15",
      },
      "depth": {
        "depth": 15.7,
        "unit": "ft",
      },
      "description": "Corona conforto damnatio volutabrum spiculum beneficium dignissimos benigne. Odit tenus taedium ara cinis adamo venia accusantium. Currus suffoco conservo tumultus decor umerus bellum.",
      "directions": "Quam acsi ea. Adsuesco ascisco bellicus corroboro voluptatibus cuius toties animadverto exercitationem. Vix totidem mollitia uxor tristis curia clementia curis.",
      "freeToDive": false,
      "gps": {
        "lat": -8.5521,
        "lon": -159.5301,
      },
      "id": "d0f9ddc8-cd64-48b8-a4f2-38c1531866e1",
      "location": "Fort Gregoryborough",
      "name": "wasteful hollow corn",
      "shoreAccess": false,
      "updatedOn": "2024-02-20T15:09:39.939Z",
      "waterType": "mixed",
    },
  ],
  "totalCount": 200,
}
`;

exports[`Dive Sites End-to-End Tests when searching dive sites will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 200,
      "message": "String must contain at most 200 character(s)",
      "path": [
        "query",
      ],
      "type": "string",
    },
    {
      "code": "custom",
      "message": "Must be in the format "<lat>,<lon>"",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "radius",
      ],
      "received": "nan",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'true' | 'false', received 'sure'",
      "options": [
        "true",
        "false",
      ],
      "path": [
        "freeToDive",
      ],
      "received": "sure",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'true' | 'false', received '13'",
      "options": [
        "true",
        "false",
      ],
      "path": [
        "shoreAccess",
      ],
      "received": "13",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'salt' | 'fresh' | 'mixed', received 'brackish'",
      "options": [
        "salt",
        "fresh",
        "mixed",
      ],
      "path": [
        "waterType",
      ],
      "received": "brackish",
    },
    {
      "code": "custom",
      "message": "Must be in the format "<min-rating>,<max-rating>"",
      "path": [
        "rating",
        "rating",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "rating",
        "rating",
      ],
    },
    {
      "code": "custom",
      "message": "Must be in the format "<min-rating>,<max-rating>"",
      "path": [
        "difficulty",
        "difficulty",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "difficulty",
        "difficulty",
      ],
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'name' | 'rating', received 'depth'",
      "options": [
        "name",
        "rating",
      ],
      "path": [
        "sortBy",
      ],
      "received": "depth",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'up'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "up",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
  ],
}
`;

exports[`Dive Sites End-to-End Tests when searching dive sites will return the results from a filtered search 1`] = `
{
  "sites": [
    {
      "averageDifficulty": 1.75,
      "averageRating": 4.75,
      "createdOn": "2022-07-08T12:53:53.633Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": "2020-02-24T22:30:50.944Z",
        "name": "Devin Ratke",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "depth": {
        "depth": 12.24,
        "unit": "m",
      },
      "description": "Virgo validus deleo id. Sperno aegrotatio validus decor vilis adficio theologus. Summisse placeat corrigo repellat conscendo deorsum.",
      "directions": "Casso atqui alveus dedecor utor vicissitudo calco acer. Cursim explicabo admoneo aiunt tabesco. Calcar alo suggero veniam audax quidem cervus.",
      "freeToDive": true,
      "gps": {
        "lat": 61.7265,
        "lon": 166.4874,
      },
      "id": "9d23572d-d828-4c52-9da3-fdb8cdde0222",
      "location": "Cleveland Heights",
      "name": "humble crazy cockpit",
      "shoreAccess": true,
      "updatedOn": "2023-10-17T16:32:41.332Z",
      "waterType": "salt",
    },
    {
      "averageDifficulty": 2.47,
      "averageRating": 3.56,
      "createdOn": "2022-12-17T03:24:11.520Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": "2020-02-24T22:30:50.944Z",
        "name": "Devin Ratke",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "depth": {
        "depth": 18.28,
        "unit": "m",
      },
      "description": "Dedecor viscus abundans aegre iste vicissitudo auctor. Conforto patruus colo volutabrum caveo molestiae. Annus occaecati temeritas subiungo cribro.",
      "directions": "Vitium abbas iure catena amo. Facilis vulpes arma velut eius. Modi adicio tripudio.",
      "freeToDive": true,
      "gps": {
        "lat": 31.3242,
        "lon": 112.4123,
      },
      "id": "7737963a-bf8b-44ee-955f-066a098ef80b",
      "location": "Pacochahaven",
      "name": "ideal blond spume",
      "shoreAccess": true,
      "updatedOn": "2024-02-10T02:25:41.857Z",
      "waterType": "salt",
    },
    {
      "averageDifficulty": 4.86,
      "averageRating": 2.16,
      "createdOn": "2024-05-11T23:04:58.247Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": "2020-02-24T22:30:50.944Z",
        "name": "Devin Ratke",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "depth": {
        "depth": 16,
        "unit": "ft",
      },
      "description": "Currus celo capillus succurro creber spiritus. Adopto degenero dicta deduco adhaero conculco aspernatur est benigne. Barba ter praesentium.",
      "directions": "Sonitus inflammatio super deprimo velut quia tabgo. Adflicto coniecto capio. Succurro vero creta vitiosus adaugeo civitas pecco libero allatus.",
      "freeToDive": true,
      "gps": {
        "lat": 85.7376,
        "lon": -79.9916,
      },
      "id": "4d91a56c-f68a-4c11-9b06-ed1030cecec0",
      "location": "South Brown",
      "name": "meaty weird good",
      "shoreAccess": true,
      "waterType": "salt",
    },
    {
      "averageDifficulty": 3.72,
      "averageRating": 1.63,
      "createdOn": "2022-06-08T06:04:14.368Z",
      "creator": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": "2020-02-24T22:30:50.944Z",
        "name": "Devin Ratke",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "depth": {
        "depth": 21.25,
        "unit": "m",
      },
      "description": "Depereo vapulus laborum adflicto conatus. Cornu adiuvo cohors territo venio aeternus advenio vitiosus. Ocer una videlicet.",
      "directions": "Velociter stips vulnero velut corporis acquiro corona. Argentum ubi verus. Copia dignissimos tabesco cupiditas abutor videlicet porro ipsum uxor.",
      "freeToDive": true,
      "gps": {
        "lat": -59.543,
        "lon": -139.623,
      },
      "id": "5f42ff01-7011-4b49-8853-1b56be24e5ea",
      "location": "Santee",
      "name": "monumental wild standardization",
      "shoreAccess": true,
      "updatedOn": "2024-03-25T23:22:33.357Z",
      "waterType": "salt",
    },
  ],
  "totalCount": 4,
}
`;

exports[`Dive Sites End-to-End Tests when updating a dive site will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "description",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "depth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "location",
      ],
      "received": "boolean",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 90,
      "message": "Number must be less than or equal to 90",
      "path": [
        "gps",
        "lat",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "gps",
        "lon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received string",
      "path": [
        "freeToDive",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received number",
      "path": [
        "shoreAccess",
      ],
      "received": "number",
    },
  ],
}
`;
